[tool.poetry]
name = "miniscope_io"
version = "0.2.0"
description = ""
authors = [
    "sneakers-the-rat <JLSaunders987@gmail.com>",
    "t-sasatani <sasatani.dev@gmail.com>",
]
readme = "README.md"
packages = [{include = "miniscope_io"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"
numpy = ">=1.25.0"

pandas = "^2.1.0"
pydantic = "^2.3.0"
pyserial = "^3.5"
tqdm = "^4.66.1"
bitstring = "^4.2.3"
pydantic-settings = "^2.0.3"
rich = "^13.6.0"
pyyaml = "^6.0.1"
matplotlib = {version="^3.7.1", optional=true}
pytest = {version="^8.2.2", optional=true}
pytest-timeout = {version="^2.3.1", optional=true}
sphinx = {version=">=6.2.1", optional=true}
furo = {version=">2023.07.26", optional=true}
myst-parser = {version=">3.0.0", optional=true}
autodoc-pydantic = {version="^2.0.1", optional=true}

[tool.poetry.extras]
tests = ["pytest", "pytest-timeout", "matplotlib"]
docs = ["sphinx", "furo", "myst-parser", "autodoc-pydantic", "matplotlib"]
plot = ["matplotlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
streamDaq = "miniscope_io.stream_daq:main"
updateDevice = "miniscope_io.device_update:updateDevice"